--- a/index.html
+++ b/index.html
@@ -6,6 +6,41 @@
   <title>Dodge the Asteroids</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/png" href="Favicon.png">
+  <style>
+    /* Responsive overlay and play again button for mobile */
+    #game-over-overlay {
+      display: none;
+      position: absolute;
+      top: 0; left: 0; width: 100%; height: 100%;
+      background: rgba(0,0,0,0.7);
+      z-index: 100;
+      color: #fff;
+      font-family: 'Pixelify Sans', Arial, sans-serif;
+      font-size: 2em;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+    #play-again-btn {
+      font-size: 2em;
+      padding: 20px 40px;
+      border-radius: 20px;
+      border: 2px solid #333;
+      background: #fff8;
+      z-index: 101;
+      cursor: pointer;
+      margin-top: 30px;
+      display: none;
+    }
+    @media (max-width: 600px) {
+      #play-again-btn {
+        width: 90vw;
+        font-size: 1.5em;
+        padding: 16px 0;
+      }
+    }
+  </style>
 </head>
 <body>
   <div id="speed-select">
@@ -23,12 +58,14 @@
     <span id="best-score">Best: 0</span>
     <span id="deaths">Deaths: 0</span>
   </div>
-  <div id="game">
+  <div id="game" style="position:relative;">
     <button id="audio-btn" style="position:absolute;top:10px;right:10px;z-index:20;background:transparent;border:none;outline:none;cursor:pointer;">
       <img id="audio-icon" src="mute.png" alt="Mute" width="32" height="32">
     </button>
     <div id="player"></div>
     <!-- Asteroids will be created by JS -->
+    <div id="game-over-overlay"></div>
+    <button id="play-again-btn">Play Again</button>
   </div>
   <script src="script.js"></script>
 </body>
