--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     <div id="game-over-overlay"></div>
     <button id="play-again-btn">Play Again</button>
   </div>
+  <div style="position:fixed;bottom:8px;right:12px;z-index:200;font-size:1em;color:#888;font-family:sans-serif;pointer-events:none;user-select:none;">
+    Made by TechieJack
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
