--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       font-family: 'Pixelify Sans', Arial, sans-serif;
       font-size: 2em;
       text-align: center;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       flex-direction: column;
+      padding-top: 60px;
+      box-sizing: border-box;
     }
     #play-again-btn {
       font-size: 2em;
@@ -38,6 +40,10 @@
         width: 90vw;
         font-size: 1.5em;
         padding: 16px 0;
+      }
+      #game-over-overlay {
+        padding-top: 30px;
+        font-size: 1.2em;
       }
     }
   </style>
