--- a/index.html
+++ b/index.html
@@ -46,6 +46,20 @@
         font-size: 1.2em;
       }
     }
+    #techiejack-credit {
+      position: fixed;
+      top: 8px;
+      left: 12px;
+      z-index: 200;
+      font-size: 1em;
+      color: #888;
+      font-family: sans-serif;
+      pointer-events: none;
+      user-select: none;
+      background: rgba(255,255,255,0.3);
+      padding: 2px 8px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
@@ -73,7 +87,7 @@
     <div id="game-over-overlay"></div>
     <button id="play-again-btn">Play Again</button>
   </div>
-  <div style="position:fixed;bottom:8px;right:12px;z-index:200;font-size:1em;color:#888;font-family:sans-serif;pointer-events:none;user-select:none;">
+  <div id="techiejack-credit">
     Made by TechieJack
   </div>
   <script src="script.js"></script>
