--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
       left: 12px;
       z-index: 200;
       font-size: 1em;
-      color: #888;
+      color: #ffffff;
       font-family: sans-serif;
       pointer-events: none;
       user-select: none;
-      background: rgba(255,255,255,0.3);
+      background: rgba(0, 0, 0, 0.3);
       padding: 2px 8px;
       border-radius: 8px;
     }
